# math_engine

./: .gitignore  CHANGELOG.md  ERRORS.md  License  MathEngine.py  README.md  error.py  math_engine.py  pyproject.toml
.github/workflows/: ci_tests.yml  publish.yml
math_engine/: AST_Node_Types.py  __init__.py  calculator.py  cli.py  config.json  config_manager.py  error.py  non_decimal_utility.py  plugin_manager.py  utility.py
math_engine/calculator/: AST_Node_Types.py  ScientificEngine.py  __init__.py  calculator.py  translator.py
math_engine/cli/: __init__.py  cli.py
math_engine/plugins/: __init__.py  my_plugin.py
math_engine/utility/: __init__.py  config_manager.py  error.py  non_decimal_utility.py  plugin_manager.py  utility.py
tests/: non_decimal_tests.py
tools/: generate_errory.py
