[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-engine"
version = "0.6.3"
authors = [
  { name="Jan Teske", email="jan.teske.06@gmail.com" },
]
description = "A fast and secure mathematical expression evaluator."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# MOVED UP: dependencies must be a direct child of [project], not [project.scripts]
dependencies = [
    "rich",
    "prompt_toolkit"
]

[project.scripts]
math-engine = "math_engine.cli:main"
calc = "math_engine.cli:main"
start = "math_engine.cli:main"

[project.urls]
Homepage = "https://github.com/JanTeske06/math_engine"
Source = "https://github.com/JanTeske06/math_engine"
Changelog = "https://github.com/JanTeske06/math_engine/blob/master/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov"
]

[tool.setuptools.package-data]
"math_engine" = ["config.json"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]

[tool.coverage.run]
omit = [
    "*/__init__.py",

    # WIP
    "math_engine/plugins/*",
    "math_engine/plugin_manager.py"
]